# menual

./: .gitignore  PKGBUILD  README.md  pyproject.toml
.github/workflows/: ci.yml
src/menual/: main.py  menual.py  menual_config.py
tests/: test_config.py  test_layout.py
