[project]
name = "menual"
version = "0.0.1"
description = "Menual is a fast desktop application launcher built with Python and Textual."
authors = [
    { name = "FrancoisBasset", email = "mrfrancoisbasset@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.8",
]

[project.scripts]
menual = "menual.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/menual"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "ruff>=0.15.20",
]
